[package]
name = "plato-route"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Message routing for PLATO tile distribution"
repository = "https://github.com/SuperInstance/plato-route"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
